tools/fleet/fixtures/packets/invalid/unresolved-placeholder.case
source=valid-work.packet
mutation=set Branch to an angle-bracket placeholder
expected=invalid
